k8s/tripsviewer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripsinsights-tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripsinsights-tripviewer
  template:
    metadata:
      labels:
        app: tripsinsights-tripviewer
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: tripsinsights-tripviewer
        # image: openhacker3acr.azurecr.io/tripviewer:1.0
        image: acrName
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
