k8s/tripsviewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripsinsights-tripviewer
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: tripsinsights-tripviewer
